# Nicole

MPC_test_ws/: .~lock.ReferenceTraj_SmallRobot.csv#
MPC_test_ws/log_MPC/: 20211212_1734.csv  20211212_1753.csv  20211212_1755.csv  20211212_1801.csv  20211212_1808.csv  20211214_1517.csv  20211214_1529.csv  20211216_1526.csv
MPC_test_ws/logs/control/: build.make.000.log.stderr  build.make.004.log.stderr
MPC_test_ws/logs/drivers/: build.make.000.log.stderr  build.make.004.log.stderr
MPC_test_ws/logs/mapping/: build.cmake.000.log.stderr
MPC_test_ws/logs/perception/: build.cmake.000.log.stderr  build.make.001.log.stderr
MPC_test_ws/logs/robot_sim_exp/: build.cmake.001.log.stderr
MPC_test_ws/logs/trajectory_generation/: build.make.000.log.stderr  build.make.004.log.stderr
MPC_test_ws/src/collision_avoidance/: README.md
MPC_test_ws/src/control/: CMakeLists.txt  README.md  package.xml
MPC_test_ws/src/control/include/control/: mpc_ackerman.h  open_loop.h  simple_controller.h
MPC_test_ws/src/control/src/: controller_node.cpp  low_level_controller.cpp  mpc_ackerman.cpp  pure_pursuit.cpp
MPC_test_ws/src/drivers/: README.md
MPC_test_ws/src/localization/: package.xml
MPC_test_ws/src/perception/: CMakeLists.txt
MPC_test_ws/src/robot_sim_exp/: .gitignore  CMakeLists.txt  README.md  package.xml
catkin_ws/backup/musashi_minibot_ws/: global_trajectory.csv  install.sh  start_creating_map.sh  start_lidar.sh  start_navigation.sh  start_pure_localization.sh  start_robot.sh  start_slam.sh  trajectory_with_rpm.csv
catkin_ws/cartographer_ws/: Building and installation guide.txt
catkin_ws/cartographer_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/cartographer_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/cartographer_ws/src/: .rosinstall
catkin_ws/ishiyama_ws/: global_trajectory.csv
catkin_ws/ishiyama_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/musashi_minibot_ws/: global_trajectory.csv  start_creating_map.sh  start_navigation.sh  start_pure_localization.sh  start_robot.sh  time.csv  trajectory_with_rpm.csv
catkin_ws/musashi_minibot_ws/Guide/: Building and installation guide_cartographer.txt  Guide.txt  ReadME.txt
catkin_ws/musashi_minibot_ws/data/: .~lock.pose_data_2022-07-29_14-13-22.csv#  1219inside.csv  1219inside2error.csv  1219inside3error.csv  1219outside1.csv  1219outside2.csv  (+245 more)
catkin_ws/musashi_ws/: angles.csv  global_trajectory.csv  musashi_ws.files  musashi_ws.includes
catkin_ws/musashi_ws/src/mapping/: CMakeLists.txt  README.md
catkin_ws/musashi_ws/src/mapping/maps/: schoolyard.yaml  schoolyardV2.yaml  test_map.yaml
catkin_ws/musashi_ws/src/mapping/src/: pc_to_local_map_no_inflation_node.cpp
catkin_ws/nitrabot_ws/: 0504Traj.csv  global_trajectory.csv  trajectory_with_rpm.csv  velodyne_lidar.bash
catkin_ws/sim_ws/: .c56c22a4a3be1bad26c02189245490cdcf34f9db.cam  README.md
hpipm-cpp/examples/: example_mpc.cpp
libuldaq-1.2.1/: Makefile  Makefile.in  config.h  config.status  configure  libtool  libuldaq.pc
libuldaq-1.2.1/examples/: AIn  AInScan  AInScanIepe  AInScanWithEvents  AInScanWithQueue  AInScanWithTrigger  AOut  AOutScan  CIn  CInScan  CInScanWithEncoder  DBitIn  DBitOut  DIn  DInScan  DOut  DOutScan  DaqInScan  DaqInScanWithTrigger  DaqOutScan  Makefile  Makefile.in  RemoteNetDiscovery  TIn  TmrPulseOut
libuldaq-1.2.1/src/: Makefile  Makefile.in  libuldaq.la
miniAGV/: miniAGV_creating_map.sh  miniAGV_slam_lidar.sh  miniAGV_start.sh  trajectory_with_rpm.csv
mpc_ori/: CMakeLists.txt  package.xml
mpc_ori/src/: control.cpp
(+1240 files in other folders)
